Fixed gap between title and subtitle

--- a/app/assets/stylesheets/landing_pad.css.scss
+++ b/app/assets/stylesheets/landing_pad.css.scss
@@ -42,8 +42,9 @@
     letter-spacing: 25px;
     font-size: 60px;
     font-weight: $font-weight;
+    line-height: 1;
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
   }
 
   .subtitle {
